--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Ruby 2.6
+    - name: Set up Ruby 3.1
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: 3.1.0
 
     - name: Publish to GPR
       run: |
